# SkyPro-Chapter6-Django-course-work

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml
blog/: admin.py  mixins.py  models.py  urls.py  views.py
blog/management/commands/: setup_blog_permissions.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_options.py
blog/templates/blog/: base.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: catalog_data.json
catalog/management/commands/: load_base_contact_info.py  load_test_products.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options.py  0002_alter_product_options_product_owner_product_publish.py  0003_alter_category_description_alter_category_name_and_more.py  0004_contactinfo.py
catalog/templates/catalog/: add_product.html  base.html  category_products.html  contacts.html  delete_product.html  home.html  product_detail.html
catalog/templates/catalog/includes/: footer.html  header.html  messages.html
config/: settings.py  urls.py
scrin_term/: Shell_exercises.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: base.html  login.html  profile.html  profile_edit.html  register.html
users/templates/users/emails/: welcome_email.html  welcome_email.txt
